--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -853,6 +853,7 @@
     <string name="upload_action_global_upload_pause">Pause all uploads</string>
     <string name="upload_action_global_upload_resume">Resume all uploads</string>
     <string name="dismiss_notification_description">Dismiss notification</string>
+    <string name="upload_action_file_not_exist_message">Some files not exists those files cannot be resumed</string>
     <string name="upload_action_cancelled_resume">Resume cancelled uploads</string>
     <string name="upload_action_cancelled_clear">Clear cancelled uploads</string>
     <string name="upload_manually_cancelled">Upload was cancelled by user</string>
