--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,10 @@
     <string name="assistant_screen_loading">Task List are loading, please wait</string>
     <string name="assistant_screen_no_task_available_text">No task available, you can create a new task from bottom right.</string>
 
+    <string name="assistant_screen_task_more_actions_bottom_sheet_delete_action">Delete Task</string>
+
     <string name="assistant_screen_task_create_success_message">Task successfully created</string>
+    <string name="assistant_screen_task_delete_success_message">Task deleted</string>
     <string name="assistant_screen_create_task_alert_dialog_input_field_placeholder">Type some text</string>
 
     <string name="assistant_screen_task_view_input">Input: </string>
