--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
 
     <string name="assistant_screen_loading">Task List are loading, please wait</string>
     <string name="assistant_screen_no_task_available_text">No task available, you can create a new task from bottom right.</string>
+    <string name="assistant_screen_delete_task_alert_dialog_title">Delete Task</string>
+    <string name="assistant_screen_delete_task_alert_dialog_description">Are you sure you want to delete this task?</string>
 
     <string name="assistant_screen_task_more_actions_bottom_sheet_delete_action">Delete Task</string>
 
