--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="assistant_screen_delete_task_alert_dialog_title">Delete Task</string>
     <string name="assistant_screen_delete_task_alert_dialog_description">Are you sure you want to delete this task?</string>
 
+    <string name="assistant_screen_select_different_task_type_to_add">Please select different task type to create a new task</string>
+
     <string name="assistant_screen_task_more_actions_bottom_sheet_delete_action">Delete Task</string>
 
     <string name="assistant_screen_task_create_success_message">Task successfully created</string>
