--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
 
     <string name="ecosystem_apps_display_assistant">Assistant</string>
 
+    <string name="assistant_screen_task_types_error_state_message">Cannot able to fetch task types, please check your internet connection.</string>
+    <string name="assistant_screen_task_list_error_state_message">Cannot able to fetch task list, please check your internet connection.</string>
+
     <string name="assistant_screen_top_bar_title">Assistant</string>
     <string name="assistant_screen_loading">Task List are loading, please wait</string>
     <string name="assistant_screen_no_task_available_for_all_task_filter_text">No task available. Select a task type to create a new task.</string>
