--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,12 @@
 
     <string name="ecosystem_apps_display_assistant">Assistant</string>
 
+    <string name="app_config_proxy_host_title">Host</string>
+    <string name="app_config_proxy_host_description">Select a proxy host configuration</string>
+
+    <string name="app_config_proxy_port_title">Port</string>
+    <string name="app_config_proxy_port_description">Select a proxy port configuration</string>
+
     <string name="assistant_screen_task_types_error_state_message">Unable to fetch task types, please check your internet connection.</string>
     <string name="assistant_screen_task_list_error_state_message">Unable to fetch task list, please check your internet connection.</string>
 
