--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,9 @@
     <string name="assistant_screen_failed_task_text">Failed</string>
     <string name="assistant_screen_running_task_text">In Progress</string>
 
+    <string name="assistant_task_detail_screen_input_button_title">Input</string>
+    <string name="assistant_task_detail_screen_output_button_title">Output</string>
+
     <string name="assistant_screen_all_task_type">All</string>
 
     <string name="drawer_item_assistant">Assistant</string>
