--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,6 +188,7 @@
     <string name="uploader_info_dirname">Folder name</string>
 
     <string name="upload_notification_manager_start_text">%1$d / %2$d - %3$s</string>
+    <string name="upload_notification_manager_upload_in_progress_text">%1$d%%</string>
 
     <string name="uploader_upload_in_progress_ticker">Uploading…</string>
     <string name="uploader_upload_in_progress">%1$d%%</string>
@@ -219,6 +220,10 @@
     <string name="uploads_view_upload_status_fetching_server_version">Fetching server version…</string>
     <string name="uploads_view_later_waiting_to_upload">Waiting to upload</string>
     <string name="uploads_view_group_header" translatable="false">%1$s (%2$d)</string>
+
+    <string name="downloader_notification_manager_download_text">%1$d / %2$d - %3$s</string>
+    <string name="downloader_notification_manager_in_progress_text">%1$d%%</string>
+
     <string name="downloader_download_in_progress_ticker">Downloading…</string>
     <string name="downloader_download_in_progress">%1$d%% %2$s</string>
     <string name="downloader_download_in_progress_content">%1$d%% Downloading %2$s</string>
