--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -334,6 +334,9 @@
     <string name="auth_account_does_not_exist">The account is not added on this device yet</string>
     <string name="auth_access_failed">Access failed: %1$s</string>
 
+    <string name="authenticator_activity_cancel_login">Cancel Login</string>
+    <string name="authenticator_activity_please_complete_login_process">Please complete login process in your browser</string>
+
     <string name="favorite">Add to favorites</string>
     <string name="unset_favorite">Remove from favourites</string>
     <string name="encrypted">Set as encrypted</string>
