fix(files): Use "favorites" versus "favourites" consistently
Signed-off-by: Josh <josh.t.richards@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -343,7 +343,7 @@
     <string name="authenticator_activity_please_complete_login_process">Please complete login process in your browser</string>
 
     <string name="favorite">Add to favorites</string>
-    <string name="unset_favorite">Remove from favourites</string>
+    <string name="unset_favorite">Remove from favorites</string>
     <string name="encrypted">Set as encrypted</string>
     <string name="unset_encrypted">Unset encryption</string>
     <string name="common_rename">Rename</string>
