--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1222,6 +1222,6 @@
 
     <string name="file_name_validator_error_copy_or_move">Folder path contains reserved names or invalid character</string>
     <string name="file_name_validator_error_invalid_character">File name contains invalid characters: %s</string>
-    <string name="file_name_validator_error_reserved_names">File name is a reserved name</string>
+    <string name="file_name_validator_error_reserved_names">%s is a reserved name</string>
     <string name="file_name_validator_error_ends_with_space_period">File name ends with a space or a period</string>
 </resources>
