Give user to the better feedback
Signed-off-by: alperozturk <alper_ozturk@proton.me>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1211,7 +1211,7 @@
     <string name="share_not_allowed_when_file_drop">Resharing is not allowed during secure file drop</string>
 
 
-    <string name="unified_search_fragment_calendar_event_not_found">Event not found. Redirecting to web…</string>
-    <string name="unified_search_fragment_contact_not_found">Contact not found. Redirecting to web…</string>
+    <string name="unified_search_fragment_calendar_event_not_found">Event not found, you can always sync to update. Redirecting to web…</string>
+    <string name="unified_search_fragment_contact_not_found">Contact not found, you can always sync to update. Redirecting to web…</string>
     <string name="unified_search_fragment_permission_needed">Permissions are required to open search result otherwise it will redirected to web…</string>
 </resources>
