--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1208,4 +1208,8 @@
     <string name="sub_folder_rule_day">Year/Month/Day</string>
     <string name="secure_share_not_set_up">Secure sharing is not set up for this user</string>
     <string name="share_not_allowed_when_file_drop">Resharing is not allowed during secure file drop</string>
+    <string name="prefs_category_sync">Sync</string>
+    <string name="internal_two_way_sync">Internal two way sync</string>
+    <string name="prefs_two_way_sync_summary">Manage internal folders for two way sync</string>
+    <string name="internal_two_way_sync_not_yet">Not yet, soon to be synced</string>
 </resources>
