--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -419,6 +419,7 @@
     <string name="preview_media_unhandled_http_code_message">File is currently locked by another user or process and therefore not deletable. Please try again later.</string>
 
     <string name="preview_sorry">Sorry</string>
+    <string name="preview_image_downloading_image_for_edit">Downloading image to start the edit screen, please wait…</string>
     <string name="preview_image_description">Image preview</string>
     <string name="preview_image_error_unknown_format">Unable to show image</string>
     <string name="preview_image_error_no_local_file">There is no local file to preview</string>
