solve git conflict
Signed-off-by: alperozturk <alper_ozturk@proton.me>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1214,7 +1214,12 @@
     <string name="secure_share_not_set_up">Secure sharing is not set up for this user</string>
     <string name="share_not_allowed_when_file_drop">Resharing is not allowed during secure file drop</string>
     <string name="file_list_empty_local_search">No file or folder matching your search</string>
+
     <string name="unified_search_fragment_calendar_event_not_found">Event not found, you can always sync to update. Redirecting to web…</string>
     <string name="unified_search_fragment_contact_not_found">Contact not found, you can always sync to update. Redirecting to web…</string>
     <string name="unified_search_fragment_permission_needed">Permissions are required to open search result otherwise it will redirected to web…</string>
+
+    <string name="file_name_validator_error_invalid_character">File name contains invalid characters</string>
+    <string name="file_name_validator_error_reserved_names">File name is a reserved name</string>
+    <string name="file_name_validator_error_ends_with_space_period">File name ends with a space or a period</string>
 </resources>
