--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1224,8 +1224,8 @@
     <string name="file_name_validator_rename_before_move_or_copy">%s. Please rename the file before moving or copying</string>
     <string name="file_name_validator_upload_content_error">Some contents cannot able to uploaded due to contains reserved names or invalid character</string>
     <string name="file_name_validator_error_contains_reserved_names_or_invalid_characters">Folder path contains reserved names or invalid character</string>
-    <string name="file_name_validator_error_invalid_character">File name contains invalid characters: %s</string>
-    <string name="file_name_validator_error_reserved_names">%s is a reserved name</string>
+    <string name="file_name_validator_error_invalid_character">Name contains an invalid character: %s</string>
+    <string name="file_name_validator_error_reserved_names">%s is a forbidden name</string>
     <string name="file_name_validator_error_forbidden_file_extensions">.%s is a forbidden file extension</string>
-    <string name="file_name_validator_error_ends_with_space_period">File name ends with a space or a period</string>
+    <string name="file_name_validator_error_ends_with_space_period">Name ends with a space or a period</string>
 </resources>
