--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -415,7 +415,7 @@
     <string name="file_name_validator_current_path_is_invalid">Текущее имя папки неверное, пожалуйста, переименуйте папку. Перенаправление в корень</string>
     <string name="file_name_validator_error_contains_reserved_names_or_invalid_characters">Путь к папке содержит зарезервированные имена или недопустимый символ</string>
     <string name="file_name_validator_error_ends_with_space_period">Имя заканчивается пробелом или точкой</string>
-    <string name="file_name_validator_error_forbidden_file_extensions">.%s является запрещенным расширением файла</string>
+    <string name="file_name_validator_error_forbidden_file_extensions">%s является запрещенным расширением файла</string>
     <string name="file_name_validator_error_invalid_character">Имя содержит недопустимый символ: %s</string>
     <string name="file_name_validator_error_reserved_names">%s это запрещенное имя</string>
     <string name="file_name_validator_rename_before_move_or_copy">%s. Пожалуйста, переименуйте файл перед перемещением или копированием</string>
